Bug 195717 - 'KXMLGUIFactory::refreshActionProperties' does not honour default shortcuts for actions that were created after GUI setup
Summary: 'KXMLGUIFactory::refreshActionProperties' does not honour default shortcuts f...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: shortcuts (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 173563 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-08 23:11 UTC by Michel Ludwig
Modified: 2010-10-19 23:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Ludwig 2009-06-08 23:11:48 UTC
Version:            (using Devel)
Installed from:    Compiled sources

The default shortcut for actions that are set up after the GUI has been created (with XMLGUI) will lose the default shortcut setting after a call to 'KXMLGUIFactory::refreshActionProperties'.

It seems that 'KXMLGUIFactoryPrivate::saveDefaultActionProperties' is only called in 'KXMLGUIFactory::addClient'. Later changes to shortcuts (or actions that are created later) are not taken into account.
Comment 1 David Faure 2010-10-19 22:25:33 UTC
*** Bug 173563 has been marked as a duplicate of this bug. ***
Comment 2 David Faure 2010-10-19 22:36:33 UTC
SVN commit 1187590 by dfaure:

Load custom shortcuts for dynamic actions (plugActionList) as well.
This makes it possible to set a shortcut for khtml's "Display Images on Page" (bug 173563)
or for "switch to view mode Cervisia" (Rigo Wenning's request).

FIXED-IN: 4.6
BUG: 195717


 M  +2 -0      kxmlguiclient.h  
 M  +47 -45    kxmlguifactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187590