Load custom shortcuts for dynamic actions (plugActionList) as well. This makes it possible to set a shortcut for khtml's "Display Images on Page" (bug 173563) or for "switch to view mode Cervisia" (Rigo Wenning's request).

FIXED-IN: 4.6
BUG: 195717

svn path=/trunk/KDE/kdelibs/; revision=1187590