kdeui/xmlgui/kxmlguiclient.h
@@ -373,6 +373,8 @@ protected:
    */
    virtual void stateChanged(const QString &newstate, ReverseStateChange reverse = StateNoReverse);
 
+   // KDE5 TODO: virtual void loadActionLists() {}, called when the guiclient is added to the xmlgui factory
+
 protected:
   virtual void virtual_hook( int id, void* data );
 
